  turned on if the destination name is the currently ACTIVE user name, which
  can be selected by pressing Ctrl+U AND the Rvd flag is only turned
  on if the destination address is the default address of the current
  mail area, you must add "Switch ReceiveAllNames Off" and
  "Switch ReceiveAllAddresses Off" to the configuration file.

Fixes:

- The codepage 850 recoding tables now properly recognise the Euro currency
  sign (it will now be displayed as EU if the local terminal cannot display
  the Euro currency sign).

- Fixed the manual WRT lastread pointer handling. It contained some
  blatantly wrong information about this topic.

- Bugfixes for lastread pointer handling. The code should be really
  idiot-proof now.

- "xc:" crossposting now also works when editing a message, not only when
  creating a new message.

- Fixes for treatment of High-ASCII characters, in message list and on
  text import/export.

- The message body length that Msged was reporting to the Squish API was
  longer than necessary.  This caused space waste and could also confuse
  other programs that read from the Squish base (though no real-life
  programs that have problems with this are known to me).

- Fixed the "PrivateNet" feature.

- Fixed the SoftCRXlat translation method to work on the transport charset
  instead of the local charset. This affects specifically the problem with
  the cyrillic big en ("H"). Please refer to the entry for the keyword
  "SoftCRXlat" in the updated Msged manual.

- The OS/2 version now also allows entry of the "cyrillic small er" letter
  (scan code 0xe0) in codepage 866.

- Msged can now handle TAB characters in text files when importing them.

- Fixed crashes on importing text files that contained tabulator characters.

- Reduced the memory requirements of a Borland compiled DOS executable
  considerably in case of a lot of "Alias" definitions. Again the realloc()
  problem.

- Fixed display of kludge character (001) on Linux.
